--- a/teamversus/src/main/resources/static/index.html
+++ b/teamversus/src/main/resources/static/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/Indexcss.css">
+    <link rel="stylesheet" href="../templates/CSS/Indexcss.css">
     <title>TeamVersus</title>
 </head>
 <body>
     <div id="container">
-        <img id="icon" src="/src/main/resources/static/images/logoTV.png" alt="Icono">
+        <img id="icon" src="/images/logoTV.png" alt="Icono">
         <button id="startButton">Iniciar</button>
     </div>
-
-    <script src="/src/main/java/controller/Index.js"></script>
 </body>
 </html>
